<resources>
    <string name="app_name">Navigation Component Project</string>
    <string name="open_box">Open Box</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="please_select_a_right_box">Please, select a right box</string>
    <string name="box_picture">box_picture</string>
    <string name="box">Box</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_ve_chosen_a_right_box">You`ve chosen a right box</string>
    <string name="go_back_to_menu">Go back to menu</string>
    <string name="settings">Settings</string>
    <string name="select_the_number_of_boxes">Select the number of boxes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="tire">-</string>
    <string name="timer_enable">Timer Enable</string>
    <string name="application_name">Application Name</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="ok">Ok</string>
    <string name="example">Example</string>
    <string-array name="count_of_boxes">
        <item>1 Box</item>
        <item>2 Boxes</item>
        <item>3 Boxes</item>
        <item>4 Boxes</item>
        <item>5 Boxes</item>
    </string-array>
    <string name="box_title">Box #%1$d</string>
    <string name="count_of_boxes">count_of_boxes</string>
    <string name="timer">timer</string>
    <string name="enable_timer">enable_timer</string>
    <string name="box_is_empty">Box is empty</string>
    <string name="you_ve_lost">You`ve lost</string>
</resources>