<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatButton
        app:style = "@style/button"
        android:id = "@+id/open_box_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text = "@string/open_box"/>
    <androidx.appcompat.widget.AppCompatButton
        app:style = "@style/button"
        android:id = "@+id/setting_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text = "@string/options"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id = "@+id/about_box"
        app:style = "@style/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text = "@string/about"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id = "@+id/exit_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text = "@string/exit"
        android:layout_marginTop="30dp"
        app:style = "@style/button"/>

</LinearLayout>